# improving-ocr-with-genai

./: .gitignore  ReadMe.md  pyproject.toml
config/: config_template.yaml
data/folio8r_ground_truth/: folio8r_ground_truth.txt
data/folio8v_ground_truth/: folio8v_ground_truth.json
notebooks/: DigitalePhilologie2024.ipynb  calculate_similarity.ipynb  openai_ocr.ipynb
output/: alignment_output.csv  alignment_output.txt  result_with_gpt4o.json  result_with_gpt4o_and_transkribus.json  transkribus_text.txt
prompts/: cot_prompt.txt  ocr_cot_prompt.j2  ocr_prompt.j2
src/: config.py  models.py  pipeline.py
src/ocr/: openai_ocr.py  transkribus_api.py
src/preprocessing/: page_splitter.py
src/utils/: logging_utils.py
