[tool.poetry]
name = "improving-ocr-with-genai"
version = "0.1.0"
description = ""
authors = ["Nicolas Werner <64469511+nicolas-werner@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
openai = "^1.43.0"
python-dotenv = "^1.0.1"
collatex = "^2.3"
python-levenshtein = "^0.25.1"
graphviz = "^0.20.3"
pandas = "^2.2.2"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
requests = "^2.32.3"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
