[project]
name = "improving-ocr-with-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2",
    "jupyter>=1.1.1",
    "openai>=1.47.0",
    "requests>=2.32.3",
    "tiktoken>=0.7.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
    "verovio>=4.3.1",
]
