[project]
name = "improving-ocr-with-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.2",
    "jinja2>=3.1.4",
    "jupyter>=1.1.1",
    "openai>=1.47.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.9.2",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.8.1",
    "tiktoken>=0.7.0",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
    "verovio>=4.3.1",
]
